--- a/requirements.txt
+++ b/requirements.txt
@@ -60,7 +60,7 @@ Pygments==2.13.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.6
-pywin32==305
+#pywin32==305
 pyzmq==24.0.1
 requests==2.28.1
 requests-oauthlib==1.3.1
